Fix spacing (use more margins, less padding).

--- a/style.scss
+++ b/style.scss
@@ -1,111 +1,21 @@
 @import "reset.css";
 
 
-
-/*
- * General.
- */
-
 body {
   font-family: "Optima", sans-serif;
-  font-size: 100%;
   font-weight: 100;
-}
-
-/* link decorations */
-a, a:link, a:hover, a:visited, a:active {
-  color: #0000cc;
-  text-decoration: none;
-}
-a:hover {
-  color: #0000ff;
-  text-decoration: underline;
-}
-
-/* http://css-tricks.com/snippets/css/clear-fix/ */
-.clearfix:after {
-  visibility: hidden;
-  display: block;
-  content: "";
-  clear: both;
-  height: 0;
-}
-
-/* fixed-width page content */
-.fixed-width-800px {
-  margin: 0 auto;
-  width: 800px;
-}
-
-.center-content-horizontally {
-  width: inherit;
-
-  display: box;
-  box-pack: center;
-
-  display: -webkit-box;
-  -webkit-box-pack: center;
-
-  display: -moz-box;
-  -moz-box-pack: center;
-}
-
-.center-content-vertically {
-  height: inherit;
-
-  display: box;
-  box-align: center;
-
-  display: -webkit-box;
-  -webkit-box-align: center;
-
-  display:-moz-box;
-  -moz-box-align: center;
-}
-
-
-
-/*
- * Page header.
- */
-
-.page-header {
-  background-color: #c9bba3;
-}
-
-.page-header-content {
-  
-  height: 6em;                        /* require a height so that .center-content-vertically works */
-  
-  .logo {
-    font-family: monospace;
-    font-size: 400%;
-    font-weight: 800;
-    letter-spacing: 0.2em;
-  }
-
-  .version {
-    font-size: 80%;
-  }
-
-  img {
-    position: relative;
-    left: 700px;
-    top: -50px;
-  }
-
-}
-
-
-
-/*
- * Page body.
- */
-
-.page-body-content {
-  
+  margin: 0 auto;                               /* center the page */
   margin-top: 4em;
   margin-bottom: 4em;
+  width: 800px;
+
+  a, a:link, a:hover, a:visited, a:active {
+    color: #0000cc;
+    text-decoration: none;
+  }
+  a:hover {
+    text-decoration: underline;
+  }
 
   article {
     margin-bottom: 3em;
@@ -120,13 +30,16 @@ a:hover {
 
   h2 {
     font-weight: normal;
-    padding-top: 0.8em;
-    padding-bottom: 0.2em;
+    margin-top: 1.6em;
+    margin-bottom: 0.4em;
   }
   
-  /* the headers are links to themselves so that users can save links to specific sections on the page, but they look better as normal text color */
+  h1+h2 {
+    margin-top: 0em;                            /* we do not need as much space when an h2 is immediately below an h1 */
+  }
+  
   h1, h2 {
-    a, a:link, a:hover, a:visited, a:active {
+    a, a:link, a:hover, a:visited, a:active {   /* self-referencing header links look better in normal text color */
       color: inherit;
     }
   }
@@ -140,16 +53,16 @@ a:hover {
     line-height: 1.3;
     margin-top: 0.8em;
     margin-bottom: 0.8em;
-    overflow: auto;                   /* make it easy to select code with mouse for copy & paste */
-    padding: 0.8em;
+    overflow: auto;                             /* make it easy to select code with mouse for copy & paste */
+    padding: 0.8em;                             /* space between the border and the contents */
   }
   
   span[class="dim"] {
-    color: #aaa;                      /* dim un-highlighted code */
+    color: #aaa;                                /* dim un-highlighted code */
   }
 
-  div[class="highlight"] {            /* inserted by {% highlight language %} */
-    color: black;                     /* un-dim highlighted code */
+  div[class="highlight"] {                      /* inserted by {% highlight language %} */
+    color: black;                               /* un-dim highlighted code */
   }
   
   ul {
@@ -159,20 +72,18 @@ a:hover {
   ol {
     list-style: decimal outside none;
   }
+  
+  li {
+    margin-bottom: 0.6em;
+  }
 
   ul, ol {
     line-height: 1.1em;
-    margin-left: 2.4em;
+    margin-left: 2em;
     margin-right: 2em;
-
-    li {
-      padding-top: 0.4em;
-    }
   }
 
   ul[class="steps"], ol[class="steps"] {
-    margin-left: 1.4em;
-
     li {
       margin-bottom: 1.8em;
 
@@ -180,55 +91,5 @@ a:hover {
         margin-bottom: 0.6em;
       }
     }
-  }
-
-}
-
-
-
-/*
- * Page footer.
- */
-
-.page-footer {
-  background-color: #ededed;
-}
-
-.page-footer-content {
-  
-  color: #6a6a6a;
-  font-size: 90%;
-  padding-top: 1em;
-  padding-bottom: 1em;
-
-  nav {
-    
-    div {
-      
-      line-height: 1.5;
-      padding-top: 2em;
-      padding-bottom: 2em;
-      margin-left: 2em;
-      margin-right: 2em;
-      width: 20em;
-      
-      h1 {
-        font-weight: 800;
-        margin-bottom: 0.4em;
-      }
-
-    }
-
-    div:first-child {
-      text-align: right;
-    }
-    
-  }
-
-  .copyright {
-    font-size: 75%;
-    padding-top: 1em;
-    padding-bottom: 2em;
-    text-align: center;
   }
 }
